--- a/angular/src/app/components/login/login.component.html
+++ b/angular/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+<!-- <div class="col-md-12">
     <div class="card card-container">
         <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" class="profile-img-card" />
         <form *ngIf="!isLoggedin" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
@@ -22,7 +22,9 @@
                 </div>
             </div>
             <div class="form-group">
-                <button class="btn btn-primary btn-block">Login</button>
+                <button class="btn btn-primary btn-block">
+                    Login
+                </button>
             </div>
             <div class="form-group">
                 <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFailed">
@@ -30,8 +32,50 @@
                 </div>
             </div>
         </form>
+    </div>
+</div> -->
 
-        <div class="alert alert-success" *ngIf="isLoggedin">Logged in as {{ roles }}.
+<div class="content-wrapper d-flex align-items-center auth px-0">
+    <div class="row w-100 mx-0">
+        <div class="col-lg-4 mx-auto">
+            <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+                <h4>Hello! let's get started</h4>
+                <h6 class="font-weight-light">Sign in to continue.</h6>
+
+                <form class="pt-3" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+                    <div class="form-group">
+                        <input type="text" class="form-control form-control-lg" name="username"
+                            placeholder="Username" [(ngModel)]="form.username" required #username="ngModel">
+                        <div class="alert alert-danger" role="alert" *ngIf="username.errors && f.submitted">
+                            Username is required!
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control form-control-lg" id="loginPassword"
+                            placeholder="Password" name="password" [(ngModel)]="form.password" required minlength="6"
+                            #password="ngModel">
+                        <div class="alert alert-danger" role="alert" *ngIf="password.errors && f.submitted">
+                            <div *ngIf="password.errors.required">Password is required</div>
+                            <div *ngIf="password.errors.minlength">
+                                Password must be at least 6 characters
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-3">
+                        <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">SIGN IN</button>
+                        <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFailed">
+                            Login failed: {{ errorMessage }}
+                        </div>
+                    </div>
+                    <div class="my-2 d-flex justify-content-between align-items-center">
+                        <a href="#" class="auth-link text-black">Forgot password?</a>
+                    </div>
+                    <div class="text-center mt-4 font-weight-light">
+                        Don't have an account? <a routerLink="/signup" class="text-primary">Create</a>
+                    </div>
+                </form>
+
+            </div>
         </div>
     </div>
 </div>
