--- a/angular/src/app/components/register/register.component.html
+++ b/angular/src/app/components/register/register.component.html
@@ -1,51 +1,61 @@
-<div class="col-md-12">
-    <div class="card card-container">
-        <!-- <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" class="profile-img-card" /> -->
-        <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" name="username" [(ngModel)]="form.username" required minlength="3" maxlength="20" #username="ngModel" />
-                <div class="alert-danger" *ngIf="username.errors && f.submitted">
-                    <div *ngIf="username.errors.required">Username is required</div>
-                    <div *ngIf="username.errors.minlength">
-                        Username must be at least 3 characters
-                    </div>
-                    <div *ngIf="username.errors.maxlength">
-                        Username must be at most 20 characters
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required minlength="6" #password="ngModel" />
-                <div class="alert-danger" *ngIf="password.errors && f.submitted">
-                    <div *ngIf="password.errors.required">Password is required</div>
-                    <div *ngIf="password.errors.minlength">
-                        Password must be at least 6 characters
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" name="email" [(ngModel)]="form.email" required email #email="ngModel" />
-                <div class="alert-danger" *ngIf="email.errors && f.submitted">
-                    <div *ngIf="email.errors.required">Email is required</div>
-                    <div *ngIf="email.errors.email">
-                        Email must be a valid email address
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <button class="btn btn-primary btn-block">Sign Up</button>
-            </div>
+<div class="content-wrapper d-flex align-items-center auth px-0">
+    <div class="row w-100 mx-0">
+        <div class="col-lg-4 mx-auto">
+            <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+                <h4>New here?</h4>
+                <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
 
-            <div class="alert alert-warning" *ngIf="f.submitted && isSignupFailed">
-                Signup failed!<br />{{ errorMessage }}
+                <form class="pt-3" *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm"
+                    novalidate>
+                    <div class="form-group">
+                        <input type="text" class="form-control form-control-lg" placeholder="Username" name="username"
+                            [(ngModel)]="form.username" required minlength="3" maxlength="20" #username="ngModel">
+                        <div class="alert-danger" *ngIf="username.errors && f.submitted">
+                            <div *ngIf="username.errors.required">Username is required</div>
+                            <div *ngIf="username.errors.minlength">
+                                Username must be at least 3 characters
+                            </div>
+                            <div *ngIf="username.errors.maxlength">
+                                Username must be at most 20 characters
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control form-control-lg" placeholder="Email" name="email"
+                            [(ngModel)]="form.email" required email #email="ngModel">
+                        <div class="alert-danger" *ngIf="email.errors && f.submitted">
+                            <div *ngIf="email.errors.required">Email is required</div>
+                            <div *ngIf="email.errors.email">
+                                Email must be a valid email address
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control form-control-lg" placeholder="Password"
+                            name="password" [(ngModel)]="form.password" required minlength="6" #password="ngModel">
+                        <div class="alert-danger" *ngIf="password.errors && f.submitted">
+                            <div *ngIf="password.errors.required">Password is required</div>
+                            <div *ngIf="password.errors.minlength">
+                                Password must be at least 6 characters
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-3">
+                        <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">SIGN
+                            UP</button>
+                    </div>
+                    <div class="mt-3 alert alert-warning" *ngIf="f.submitted && isSignupFailed">
+                        Signup failed!<br />{{ errorMessage }}
+                    </div>
+                    <div class="text-center mt-4 font-weight-light">
+                        Already have an account? <a routerLink="/login" class="text-primary">Login</a>
+                    </div>
+                </form>
+                <div class="alert alert-success" *ngIf="isSuccessful">
+                    Your registration is successful! please check your email
+                </div>
             </div>
-        </form>
-
-        <div class="alert alert-success" *ngIf="isSuccessful">
-            Your registration is successful! please check your email
         </div>
     </div>
 </div>
+<!-- content-wrapper ends -->
