--- a/angular/src/app/components/nav-bar/login-status/login-status.component.html
+++ b/angular/src/app/components/nav-bar/login-status/login-status.component.html
@@ -1,13 +1,4 @@
-<ul class="navbar-nav navbar-nav-right" *ngIf="!isLoggedin">
-    <li class="nav-item">
-        <a class="btn btn-primary btn-rounded btn-fw" role="button" routerLink="signup">SignUp</a>
-    </li>
-    <li class="nav-item">
-        <a class="btn btn-primary btn-rounded btn-fw" role="button" routerLink="login">LogIn</a>
-    </li>
-</ul>
-
-<ul class="navbar-nav navbar-nav-right" *ngIf="isLoggedin">
+<ul class="navbar-nav navbar-nav-right">
     <li class="nav-item nav-profile dropdown">
         
         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
