--- a/angular/src/app/components/nav-bar/nav-bar.component.html
+++ b/angular/src/app/components/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <!-- logged in -->
-    <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
+    <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end" *ngIf="isLoggedin">
         <app-year-picker></app-year-picker>
         <ul class="navbar-nav ml-lg-4 w-100">
             <li class="nav-item nav-search d-none d-lg-block w-100">
@@ -29,19 +29,20 @@
         </button>
     </div>
     <!-- not logged in -->
-    <!-- <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
-        <app-year-picker></app-year-picker>
-        <ul class="navbar-nav ml-lg-4 w-100">
-            <li class="nav-item nav-search d-none d-lg-block w-100">
+    <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end" *ngIf="!isLoggedin">
 
-                <app-search></app-search>
+        <ul class="navbar-nav navbar-nav-right">
+            <li class="nav-item">
+                <a class="btn btn-primary btn-rounded btn-fw" role="button" routerLink="signup">SignUp</a>
+            </li>
+            <li class="nav-item">
+                <a class="btn btn-primary btn-rounded btn-fw" role="button" routerLink="login">LogIn</a>
             </li>
         </ul>
 
-        <app-login-status></app-login-status>
         <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button"
             data-toggle="offcanvas">
             <span class="mdi mdi-menu"></span>
         </button>
-    </div> -->
+    </div>
 </nav>
