--- a/angular/src/app/components/nav-bar/login-status/login-status.component.html
+++ b/angular/src/app/components/nav-bar/login-status/login-status.component.html
@@ -6,13 +6,11 @@
             <span class="nav-profile-name">{{username}}</span>
         </a>
         <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-            <a class="dropdown-item">
-                <i class="mdi mdi-account text-primary"></i>
-                <a class="nav-link" [routerLink]="['users' ,username, 'profile']">Profile</a>
+            <a class="dropdown-item nav-link" [routerLink]="['users' ,username, 'profile']">
+                <i class="mdi mdi-account text-primary" ></i>Profile
             </a>
-            <a class="dropdown-item">
-                <i class="mdi mdi-logout text-primary"></i>
-                <a routerLink="/logout" class="nav-link">LogOut</a>
+            <a class="dropdown-item nav-link" routerLink="/logout">
+                <i class="mdi mdi-logout text-primary"></i>LogOut
             </a>
         </div>
     </li>
