finished profile look

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,16 +1,15 @@
 <div class="container-scroller">
-  <!-- partial:partials/_navbar.html -->
+  <!-- nav-bar -->
   <app-nav-bar></app-nav-bar>
-  <!-- partial -->
+
   <div class="container-fluid page-body-wrapper">
-    <!-- partial:partials/_sidebar.html -->
+    <!-- sidebar -->
     <app-sidebar></app-sidebar>
-    <!-- partial -->
+
+    <!-- main-component -->
     <div class="main-panel">
       <router-outlet></router-outlet>
+
     </div>
-    <!-- main-panel ends -->
   </div>
-  <!-- page-body-wrapper ends -->
 </div>
-<!-- container-scroller -->
