--- a/angular/src/app/components/profile/profile.component.html
+++ b/angular/src/app/components/profile/profile.component.html
@@ -1,17 +1,30 @@
-<div class="container" *ngIf="currentUser">
-    <header class="jumbotron">
-      <h3>
-        <strong>{{ currentUser.username }}</strong> Profile
-      </h3>
-    </header>
-    <p>
-      <strong>Email:</strong>
-      {{ currentUser.email }}
-    </p>
-    <strong>Roles:</strong>
-    <ul>
-      <li *ngFor="let role of currentUser.roles">
-        {{ role }}
-      </li>
-    </ul>
+<div class="content-wrapper">
+  <div class="row">
+    <div class="col-lg-12 grid-margin stretch-card">
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">Profile</h4>
+          <div class="table-responsive">
+            <table class="table">
+              <tbody>
+                <tr>
+                  <td>Username</td>
+                  <td>{{currentUser.username}}</td>
+                </tr>
+                <tr>
+                  <td>Password</td>
+                  <td><button class="btn btn-inverse-primary btn-fw">Change Password</button></td>
+                </tr>
+                <tr>
+                  <td>Email</td>
+                  <td>{{currentUser.email}}&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-inverse-primary btn-fw">Change
+                      email</button></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
