fix active link

--- a/angular/src/app/components/sidebar/sidebar.component.html
+++ b/angular/src/app/components/sidebar/sidebar.component.html
@@ -7,29 +7,29 @@
         </a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="books">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="books" >
           <i class="mdi mdi-book-open-page-variant menu-icon"></i>
           <span class="menu-title">Books</span>
         </a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="movies">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="movies" >
           <i class="mdi mdi-movie menu-icon"></i>
           <span class="menu-title">Movies</span>
         </a>
       </li>
  
-      <li class="nav-item">
-        <a class="nav-link" routerLink="tvs">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="tvs" >
           <i class="mdi mdi-television menu-icon"></i>
           <span class="menu-title">TV Series</span>
         </a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="games">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="games" >
           <i class="mdi mdi-gamepad-variant menu-icon"></i>
           <span class="menu-title">Games</span>
         </a>
