added edit bookshelf goal funciton

--- a/angular/src/app/components/bookshelf/bookshelf.component.html
+++ b/angular/src/app/components/bookshelf/bookshelf.component.html
@@ -3,7 +3,52 @@
         <div class="col-lg-12 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Books in {{currentYear}}</h4>
+                    <diV class="card-title">
+                        <h4>Books in {{bookshelfName}}</h4>
+                    </diV>
+                    <div class="d-flex align-items-end">
+                        <span>Goal: {{goal}}&nbsp;</span>
+                        <button class="btn btn-icon" data-toggle="modal" data-target="#editGoalModal">
+                            <i class="fas fa-edit"></i>
+                        </button>
+                    </div>
+
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="editGoalModal" tabindex="-1" role="dialog"
+                        aria-labelledby="editGoalModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="editGoalModalLabel">Edit Goal</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <form (ngSubmit)="editGoal()">
+                                    <div class="modal-body">
+                                        <input type="text" name="goal" class="form-control" id="editGoal"
+                                            [(ngModel)]="editGoalForm.newGoal">
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-dismiss="modal">Close</button>
+                                        <button type="submit" class="btn btn-primary">Save changes</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end of Modal-->
+
+                    <div class="card-description">
+                        <p>Reach Rate: {{reachRate}}%</p>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" [style.width.%]="reachRate"
+                            attr.aria-valuenow="{{reachRate}}" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <br>
                     <table mat-table [dataSource]="bookshelfItems" multiTemplateDataRows matSort
                         class="mat-elevation-z2">
                         <ng-container matColumnDef="title">
