--- a/angular/src/app/components/bookshelf/bookshelf.component.html
+++ b/angular/src/app/components/bookshelf/bookshelf.component.html
@@ -3,144 +3,168 @@
         <div class="col-lg-12 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
-                    <diV class="card-title">
-                        <h4>Books in {{bookshelfName}}</h4>
-                    </diV>
+
                     <div *ngIf="bookshelfName; else createBookshelf">
-                        <div class="d-flex align-items-end">
-                            <span>Goal: {{goal}}&nbsp;</span>
-                            <button class="btn btn-icon" data-toggle="modal" data-target="#editGoalModal">
-                                <i class="fas fa-edit"></i>
-                            </button>
-                        </div>
-
-
-                        <!-- Modal edit Goal -->
-                        <div class="modal fade" id="editGoalModal" tabindex="-1" role="dialog"
-                            aria-labelledby="editGoalModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="editGoalModalLabel">Edit Goal</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <form>
-                                        <div class="modal-body">
-                                            <input type="text" name="goal" class="form-control" id="editGoal" placeholder="set a new goal"
-                                                [(ngModel)]="editGoalForm.newGoal">
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary"
-                                                data-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary" (click)="editGoal()"
-                                                data-dismiss="modal">Save changes</button>
-                                        </div>
-                                    </form>
+                        <diV class="card-title">
+                            <h4>Books in {{bookshelfName}}</h4>
+                        </diV>
+                        <div class="row">
+                            <div class="col-md-10">
+                                <div class="d-flex align-items-end">
+                                    <span>Goal: {{goal}}&nbsp;</span>
+                                    <button class="btn btn-icon" data-toggle="modal" data-target="#editGoalModal">
+                                        <i class="fas fa-edit"></i>
+                                    </button>
+                                </div>
+                                <div class="card-description">
+                                    <p>Reach Rate: {{reachRate}}%</p>
                                 </div>
                             </div>
+                            <div class="col-md-2">
+                                <button type="buton" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#addbookModal">
+                                    <i class="mdi mdi-plus icon-sm"></i>Add Book</button>
+                            </div>
                         </div>
-                        <!-- end of edit Goal-->
 
-                        <div class="card-description">
-                            <p>Reach Rate: {{reachRate}}%</p>
-                        </div>
                         <div class="progress">
                             <div class="progress-bar bg-success" role="progressbar" [style.width.%]="reachRate"
                                 attr.aria-valuenow="{{reachRate}}" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
+
+                        <br>
+                        <table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort
+                            class="mat-elevation-z2">
+                            <ng-container matColumnDef="title">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+                                <td mat-cell *matCellDef="let bookshelfItems"> {{bookshelfItems.book.title}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="author">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Author </th>
+                                <td mat-cell *matCellDef="let bookshelfItems"> {{bookshelfItems.book.author}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="rating">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Rating </th>
+                                <td mat-cell *matCellDef="let bookshelfItems"> {{bookshelfItems.rating}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="status">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+                                <td mat-cell *matCellDef="let bookshelfItems">
+                                    <label *ngIf="bookshelfItems.status === 'IN_PROGRESS'"
+                                        class="badge badge-pill badge-warning">{{bookshelfItems.status}}</label>
+                                    <label *ngIf="bookshelfItems.status === 'FINISHED'"
+                                        class="badge badge-pill badge-success">{{bookshelfItems.status}}</label>
+                                    <label *ngIf="bookshelfItems.status === 'LISTING'"
+                                        class="badge badge-pill badge-light">{{bookshelfItems.status}}</label>
+                                    <label *ngIf="bookshelfItems.status === 'DNF'"
+                                        class="badge badge-pill badge-secondary">{{bookshelfItems.status}}</label>
+                                </td>
+                            </ng-container>
+
+
+                            <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+                            <ng-container matColumnDef="expandedDetail">
+                                <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+                                    <div class="example-element-detail"
+                                        [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                                        <div class="col-lg-2 img-container">
+                                            <img src="{{element.book.imageUrl}}" class="img-thumbnail" alt="thumbnail">
+                                        </div>
+                                        <div class="col-lg-10 card-body">
+                                            <ul class="list-arrow">
+                                                <li>Published: {{element.book.published}}</li>
+                                                <li>Description: <p class="card-description">
+                                                        {{element.book.description}}
+                                                    </p>
+                                                </li>
+                                                <li>Reason: {{element.reason}} </li>
+                                                <li>Comment: {{element.comment}} </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </td>
+                            </ng-container>
+                            <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+                            <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
+                                [class.example-expanded-row]="expandedElement === element"
+                                (click)="expandedElement = expandedElement === element ? null : element">
+                            </tr>
+                            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row">
+                            </tr>
+                        </table>
                     </div>
+
+
+                    <!-- if no bookshelf -->
                     <ng-template #createBookshelf>
+                        <diV class="card-description">
+                            <h4>You don't have a bookshelf this year yet.</h4>
+                        </diV>
                         <div class="d-flex align-items-end">
-                            <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#createShelfModal">
+                            <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
+                                data-target="#createShelfModal">
                                 <i class="mdi mdi-plus icon-sm">Build</i>
                             </button>
-                            
                         </div>
                     </ng-template>
 
-
-
-                    <!-- create shelf modal -->
-                    <div class="modal fade" id="createShelfModal" tabindex="-1" role="dialog"
-                    aria-labelledby="createShelfModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="createShelfModalLabel">Build a new shlef</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <form>
-                                <div class="modal-body">
-                                    <input type="text" name="goal" class="form-control" id="editGoal" placeholder="Please enter your goal"
-                                        [(ngModel)]="createShelf.newGoal">
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary" (click)="buildShelf()"
-                                        data-dismiss="modal">Create</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <!-- end of create shelf modal-->
-
-
-                    <br>
-                    <table mat-table [dataSource]="bookshelfItems" multiTemplateDataRows matSort
-                        class="mat-elevation-z2">
-                        <ng-container matColumnDef="title">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
-                            <td mat-cell *matCellDef="let bookshelfItems"> {{bookshelfItems.book.title}} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="author">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Author </th>
-                            <td mat-cell *matCellDef="let bookshelfItems"> {{bookshelfItems.book.author}} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="rating">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Rating </th>
-                            <td mat-cell *matCellDef="let bookshelfItems"> {{bookshelfItems.rating}} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="status">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-                            <td mat-cell *matCellDef="let bookshelfItems"> {{bookshelfItems.status}} </td>
-                        </ng-container>
-
-
-                        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-                        <ng-container matColumnDef="expandedDetail">
-                            <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-                                <div class="example-element-detail"
-                                    [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                                    <div class="example-element-diagram col-3 d-flex justify-content-center">
-                                        <img src="{{element.book.imageUrl}}" class="img-thumbnail" alt="thumbnail">
-                                    </div>
-                                    <div class="col-9">
-                                        <div class="">published: {{element.book.published}} </div>
-                                        <div class="">reason: {{element.reason}} </div>
-                                        <div class="">comment: {{element.comment}} </div>
-
-                                        <div class="">{{element.book.description}}</div>
-
-                                    </div>
-                                </div>
-                            </td>
-                        </ng-container>
-
-                        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-                        <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
-                            [class.example-expanded-row]="expandedElement === element"
-                            (click)="expandedElement = expandedElement === element ? null : element">
-                        </tr>
-                        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-                    </table>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<!-- Modal edit Goal -->
+<div class="modal fade" id="editGoalModal" tabindex="-1" role="dialog" aria-labelledby="editGoalModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editGoalModalLabel">Edit Goal</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form>
+                <div class="modal-body">
+                    <input type="text" name="goal" class="form-control" id="editGoal" placeholder="set a new goal"
+                        [(ngModel)]="editGoalForm.newGoal">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" (click)="editGoal()" data-dismiss="modal">Save
+                        changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<!-- end of edit Goal-->
+
+
+<!-- create shelf modal -->
+<div class="modal fade" id="createShelfModal" tabindex="-1" role="dialog" aria-labelledby="createShelfModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="createShelfModalLabel">Build a new shlef</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form>
+                <div class="modal-body">
+                    <input type="text" name="goal" class="form-control" id="createShelfGOal"
+                        placeholder="Please enter your goal" [(ngModel)]="createShelf.newGoal">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" (click)="buildShelf()"
+                        data-dismiss="modal">Create</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<!-- end of create shelf modal-->
