book browse page completed

--- a/angular/src/app/components/sidebar/sidebar.component.html
+++ b/angular/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="browse">
+        <a class="nav-link" routerLink="books">
           <i class="mdi mdi-compass-outline menu-icon"></i>
           <span class="menu-title">Browse</span>
         </a>
@@ -14,7 +14,7 @@
       </li>
 
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="books" >
+        <a class="nav-link" routerLink="bookshelf" >
           <i class="mdi mdi-book-open-page-variant menu-icon"></i>
           <span class="menu-title">Books</span>
         </a>
