--- a/angular/src/app/components/browse/browse.component.html
+++ b/angular/src/app/components/browse/browse.component.html
@@ -16,4 +16,11 @@
             </div>
         </div>
     </div>
+    <div class="footer-pagination">
+        <ngb-pagination [(page)] = "pageNumber"
+                        [pageSize] = "pageSize"
+                        [collectionSize] = "totalElements"
+                        (pageChange) = "listItems()">
+        </ngb-pagination>
+    </div>
 </div>
